unpackaged/main/default/objects/Quote/fields/Acces_arriere__c.field-meta.xml
<CustomField>
    <fullName>Acces_arriere__c</fullName>
    <label>Accès arrière (Type)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2 RAMPES INT REPLIABLES COULISSANTES (largeur 150 mm utile)</fullName>
            </value>
            <value>
                <fullName>ESCABEAU COULISSANT</fullName>
            </value>
            <value>
                <fullName>ESCABEAU COULISSANT 2 MARCHES</fullName>
            </value>
            <value>
                <fullName>ESCABEAU COULISSANT 3 MARCHES</fullName>
            </value>
            <value>
                <fullName>ESCABEAU COULISSANT 4 MARCHES</fullName>
            </value>
            <value>
                <fullName>ESCABEAU COULISSANT 5 MARCHES</fullName>
            </value>
            <value>
                <fullName>ESCABEAU COULISSANT 6 MARCHES</fullName>
            </value>
            <value>
                <fullName>ETRIER COULISSANT D</fullName>
            </value>
            <value>
                <fullName>ETRIER COULISSANT G</fullName>
            </value>
            <value>
                <fullName>ETRIER FIXE D</fullName>
            </value>
            <value>
                <fullName>ETRIER FIXE G</fullName>
            </value>
            <value>
                <fullName>ETRIERS COULISSANTS D + G</fullName>
            </value>
            <value>
                <fullName>ETRIERS FIXES D + G</fullName>
            </value>
            <value>
                <fullName>MARCHE PIED FIXE</fullName>
            </value>
            <value>
                <fullName>MARCHEPIED RABATTABLE 1 MARCHE</fullName>
            </value>
            <value>
                <fullName>MARCHEPIED RABATTABLE 2 MARCHES</fullName>
            </value>
            <value>
                <fullName>RAMPE INT RABATTABLE (largeur 700 mm utile)</fullName>
            </value>
            <value>
                <fullName>RAMPE INT REPLIABLE FIXE (largeur 1000 mm utile)</fullName>
            </value>
            <value>
                <fullName>RAMPE INT REPLIABLE FIXE (largeur 800 mm utile)</fullName>
            </value>
            <value>
                <fullName>RAMPE INT REPLIABLE PIVOTANTE (largeur 1000 mm utile)</fullName>
            </value>
            <value>
                <fullName>RAMPE INT REPLIABLE PIVOTANTE (largeur 800 mm utile)</fullName>
            </value>
            <value>
                <fullName>HORS STANDARD - voir aménagements</fullName>
            </value>
            <value>
                <fullName>SANS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>