unpackaged/main/default/objects/Quote/fields/Agrement_SFAC__c.field-meta.xml
<CustomField>
    <fullName>Agrement_SFAC__c</fullName>
    <formula>Opportunity.Account.AgrementSFAC__c</formula>
    <label>Agrément SFAC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>