unpackaged/main/default/objects/Quote/fields/Amenagements_Caisse__c.field-meta.xml
<CustomField>
    <fullName>Amenagements_Caisse__c</fullName>
    <label>Aménagements standard Caisse</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>