unpackaged/main/default/objects/Quote/fields/Amenagements_Caisse_demande__c.field-meta.xml
<CustomField>
    <fullName>Amenagements_Caisse_demande__c</fullName>
    <label>Aménagements Caisse demandés</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>