unpackaged/main/default/objects/Quote/fields/Amenagements_Chassis__c.field-meta.xml
<CustomField>
    <fullName>Amenagements_Chassis__c</fullName>
    <label>Aménagements standard Châssis</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>