unpackaged/main/default/objects/Quote/fields/Amenagements_Chassis_demande__c.field-meta.xml
<CustomField>
    <fullName>Amenagements_Chassis_demande__c</fullName>
    <label>Aménagements Châssis demandés</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>