unpackaged/main/default/objects/Quote/fields/Amenagements_Groupe__c.field-meta.xml
<CustomField>
    <fullName>Amenagements_Groupe__c</fullName>
    <label>Aménagements standard Groupe</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>