unpackaged/main/default/objects/Quote/fields/Amenagements_Hayon__c.field-meta.xml
<CustomField>
    <fullName>Amenagements_Hayon__c</fullName>
    <label>Aménagements standard Hayon</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>