unpackaged/main/default/objects/Quote/fields/Barre_etais_Qte__c.field-meta.xml
<CustomField>
    <fullName>Barre_etais_Qte__c</fullName>
    <label>Barre étais (Qté)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>