unpackaged/main/default/objects/Quote/fields/Boite_de_vitesse__c.field-meta.xml
<CustomField>
    <fullName>Boite_de_vitesse__c</fullName>
    <label>Boite de vitesse</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manuelle</fullName>
            </value>
            <value>
                <fullName>Automatique Robotisée</fullName>
            </value>
            <value>
                <fullName>Hi-Matic</fullName>
            </value>
            <value>
                <fullName>HORS STANDARD - voir Aménagements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>