unpackaged/main/default/objects/Quote/fields/Catalogue_FlowInput__c.field-meta.xml
<CustomField>
    <fullName>Catalogue_FlowInput__c</fullName>
    <label>Catalogue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BR_ST</fullName>
            </value>
            <value>
                <fullName>BR_ST_DOM TOM</fullName>
            </value>
            <value>
                <fullName>BR_ST_FRANCE BOISSON</fullName>
            </value>
            <value>
                <fullName>FS_PF</fullName>
            </value>
            <value>
                <fullName>FS_PF_LA REUNION</fullName>
            </value>
            <value>
                <fullName>FS_PF_LES ANTILLES</fullName>
            </value>
            <value>
                <fullName>FS_ST</fullName>
            </value>
            <value>
                <fullName>HY_ST</fullName>
            </value>
            <value>
                <fullName>HY_ST_DOM TOM</fullName>
            </value>
            <value>
                <fullName>HY_ST_ELIS</fullName>
            </value>
            <value>
                <fullName>HY_ST_INITIAL</fullName>
            </value>
            <value>
                <fullName>HY_ST_KALHYGE</fullName>
            </value>
            <value>
                <fullName>HY_ST_SDEZ</fullName>
            </value>
            <value>
                <fullName>SE_ST</fullName>
            </value>
            <value>
                <fullName>SE_ST_CHRONOPOST</fullName>
            </value>
            <value>
                <fullName>SE_ST_DOM TOM</fullName>
            </value>
            <value>
                <fullName>SE_ST_FRANCE BOISSON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>