unpackaged/main/default/objects/Quote/fields/Catalogue_PF_Catalogue__c.field-meta.xml
<CustomField>
    <fullName>Catalogue_PF_Catalogue__c</fullName>
    <label>Catalogue PF utilisé</label>
    <length>255</length>
    <type>Text</type>
</CustomField>