unpackaged/main/default/objects/Quote/fields/Categorie__c.field-meta.xml
<CustomField>
    <fullName>Categorie__c</fullName>
    <label>Catégorie</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sous_famille__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>R4</fullName>
            </value>
            <value>
                <fullName>R9</fullName>
            </value>
            <value>
                <fullName>V1</fullName>
            </value>
            <value>
                <fullName>V3 (Frigo)</fullName>
            </value>
            <value>
                <fullName>V5 (Frigo)</fullName>
            </value>
            <value>
                <fullName>V9 (Frigo)</fullName>
            </value>
            <value>
                <fullName>V11 (Frigo)</fullName>
            </value>
            <value>
                <fullName>V15 (Frigo)</fullName>
            </value>
            <value>
                <fullName>V20 (Frigo)</fullName>
            </value>
            <value>
                <fullName>P0 (Frigo)</fullName>
            </value>
            <value>
                <fullName>P6 (Frigo)</fullName>
            </value>
            <value>
                <fullName>P8 (Frigo)</fullName>
            </value>
            <value>
                <fullName>P10 (Frigo)</fullName>
            </value>
            <value>
                <fullName>P15 (Frigo)</fullName>
            </value>
            <value>
                <fullName>P16(Frigo)</fullName>
            </value>
            <value>
                <fullName>P18 (Frigo)</fullName>
            </value>
            <value>
                <fullName>P21 (Frigo)</fullName>
            </value>
            <value>
                <fullName>P23 (Frigo)</fullName>
            </value>
            <value>
                <fullName>S1 (Frigo)</fullName>
            </value>
            <value>
                <fullName>S2 (Frigo)</fullName>
            </value>
            <value>
                <fullName>T (Frigo)</fullName>
            </value>
            <value>
                <fullName>V3 (Sec)</fullName>
            </value>
            <value>
                <fullName>V5 (Sec)</fullName>
            </value>
            <value>
                <fullName>V9 (Sec)</fullName>
            </value>
            <value>
                <fullName>V11 (Sec)</fullName>
            </value>
            <value>
                <fullName>V15 (Sec)</fullName>
            </value>
            <value>
                <fullName>V20 (Sec)</fullName>
            </value>
            <value>
                <fullName>P0 (Sec)</fullName>
            </value>
            <value>
                <fullName>P6 (Sec)</fullName>
            </value>
            <value>
                <fullName>P8 (Sec)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>