unpackaged/main/default/objects/Quote/fields/Charge_utile_avec_options__c.field-meta.xml
<CustomField>
    <fullName>Charge_utile_avec_options__c</fullName>
    <description>Charge utile - Somme des charges utiles des options retenues</description>
    <formula>Charge_utile_Kg__c  -  Somme_charges_utiles_des_options__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Charge utile - Somme des charges utiles des options retenues</inlineHelpText>
    <label>Charge utile avec options</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>