unpackaged/main/default/objects/Quote/fields/Charge_utile_Kg__c.field-meta.xml
<CustomField>
    <fullName>Charge_utile_Kg__c</fullName>
    <label>Charge utile (Kg ± 5%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>