unpackaged/main/default/objects/Quote/fields/Chassis_hauteur_seuil__c.field-meta.xml
<CustomField>
    <fullName>Chassis_hauteur_seuil__c</fullName>
    <label>Hauteur sol plancher</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>