unpackaged/main/default/objects/Quote/fields/Chassis_largeur__c.field-meta.xml
<CustomField>
    <fullName>Chassis_largeur__c</fullName>
    <label>Largeur ext. hors rétroviseurs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>