unpackaged/main/default/objects/Quote/fields/Chassis_longueur__c.field-meta.xml
<CustomField>
    <fullName>Chassis_longueur__c</fullName>
    <label>Longueur ext. hors tout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>