unpackaged/main/default/objects/Quote/fields/Chassis_Porte_faux_arriere__c.field-meta.xml
<CustomField>
    <fullName>Chassis_Porte_faux_arriere__c</fullName>
    <label>Porte-à-faux arrière</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>