unpackaged/main/default/objects/Quote/fields/Classe__c.field-meta.xml
<CustomField>
    <fullName>Classe__c</fullName>
    <label>Classe</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FNA</fullName>
            </value>
            <value>
                <fullName>FNA/FNA</fullName>
            </value>
            <value>
                <fullName>FNA/FRC</fullName>
            </value>
            <value>
                <fullName>FNA/IN</fullName>
            </value>
            <value>
                <fullName>FNA/IR</fullName>
            </value>
            <value>
                <fullName>FNAX</fullName>
            </value>
            <value>
                <fullName>FNAX/IN</fullName>
            </value>
            <value>
                <fullName>FRA</fullName>
            </value>
            <value>
                <fullName>FRA/FRA</fullName>
            </value>
            <value>
                <fullName>FRA/FRC</fullName>
            </value>
            <value>
                <fullName>FRA/FRC/IR</fullName>
            </value>
            <value>
                <fullName>FRA/IR</fullName>
            </value>
            <value>
                <fullName>FRA/RRC</fullName>
            </value>
            <value>
                <fullName>FRA/RRC/IR</fullName>
            </value>
            <value>
                <fullName>FRAX</fullName>
            </value>
            <value>
                <fullName>FRAX_FRAX</fullName>
            </value>
            <value>
                <fullName>FRAX_IR</fullName>
            </value>
            <value>
                <fullName>FRC</fullName>
            </value>
            <value>
                <fullName>FRC_FRA_FRA</fullName>
            </value>
            <value>
                <fullName>FRC/FRC</fullName>
            </value>
            <value>
                <fullName>FRC/FRC/FRA</fullName>
            </value>
            <value>
                <fullName>FRC/FRC/FRC</fullName>
            </value>
            <value>
                <fullName>FRC/FRC/IR</fullName>
            </value>
            <value>
                <fullName>FRC/IR</fullName>
            </value>
            <value>
                <fullName>FRC/IR/IR</fullName>
            </value>
            <value>
                <fullName>FRC/RRC</fullName>
            </value>
            <value>
                <fullName>FRC/RRC/IR</fullName>
            </value>
            <value>
                <fullName>FRCX</fullName>
            </value>
            <value>
                <fullName>FRCX_FRAX</fullName>
            </value>
            <value>
                <fullName>FRCX_FRCX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>