unpackaged/main/default/objects/Quote/fields/Cloison__c.field-meta.xml
<CustomField>
    <fullName>Cloison__c</fullName>
    <label>Cloison (Type)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MOUSSE</fullName>
            </value>
            <value>
                <fullName>FIXE TRANSVERSALE</fullName>
            </value>
            <value>
                <fullName>FIXE LONGITUDINALE</fullName>
            </value>
            <value>
                <fullName>MOBILE RELEVABLE</fullName>
            </value>
            <value>
                <fullName>MOBILE TRANSVERSALE RELEVABLE</fullName>
            </value>
            <value>
                <fullName>MOBILE TRANSVERSALE RELEVABLE 1/2 - 1/2</fullName>
            </value>
            <value>
                <fullName>MOBILE TRANSVERSALE RELEVABLE 1/3 - 2/3</fullName>
            </value>
            <value>
                <fullName>MOBILE TRANSVERSALE RELEVABLE 2/3 - 1/3</fullName>
            </value>
            <value>
                <fullName>MOBILE TRANSVERSALE RELEVABLE AVEC ELECTRO-VENTILATEUR</fullName>
            </value>
            <value>
                <fullName>MOBILE TRANSVERSALE RELEVABLE AVEC PORTE BATTANTE DOUBLE CENTREE</fullName>
            </value>
            <value>
                <fullName>MOBILE TRANSVERSALE RELEVABLE AVEC PORTE BATTANTE SIMPLE CENTREE</fullName>
            </value>
            <value>
                <fullName>MOBILE TRANSVERSALE RELEVABLE AVEC PORTE COULISSANTE DOUBLE CENTREE</fullName>
            </value>
            <value>
                <fullName>MOBILE TRANSVERSALE RELEVABLE AVEC PORTE COULISSANTE SIMPLE DECALEE A DROITE</fullName>
            </value>
            <value>
                <fullName>MOBILE TRANSVERSALE RELEVABLE AVEC PORTE COULISSANTE SIMPLE DECALEE A GAUCHE</fullName>
            </value>
            <value>
                <fullName>1 GRILLE AMOVIBLE (Brasseur)</fullName>
            </value>
            <value>
                <fullName>2 GRILLES AMOVIBLES (Brasseur)</fullName>
            </value>
            <value>
                <fullName>HORS STANDARD - voir aménagements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>