unpackaged/main/default/objects/Quote/fields/Code_Pays_Catalogue__c.field-meta.xml
<CustomField>
    <fullName>Code_Pays_Catalogue__c</fullName>
    <label>Code Pays utilisé</label>
    <length>255</length>
    <type>Text</type>
</CustomField>