unpackaged/main/default/objects/Quote/fields/Code_Pays_FlowInput__c.field-meta.xml
<CustomField>
    <fullName>Code_Pays_FlowInput__c</fullName>
    <label>Code Pays</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AE</fullName>
                <isActive>false</isActive>
                <label>AE</label>
            </value>
            <value>
                <fullName>AE_EN</fullName>
            </value>
            <value>
                <fullName>AE_FR</fullName>
            </value>
            <value>
                <fullName>AT</fullName>
                <isActive>false</isActive>
                <label>AT</label>
            </value>
            <value>
                <fullName>AT_DE</fullName>
            </value>
            <value>
                <fullName>AT_EN</fullName>
            </value>
            <value>
                <fullName>AT_FR</fullName>
            </value>
            <value>
                <fullName>BE</fullName>
                <isActive>false</isActive>
                <label>BE</label>
            </value>
            <value>
                <fullName>BE_DE</fullName>
            </value>
            <value>
                <fullName>BE_EN</fullName>
            </value>
            <value>
                <fullName>BE_FR</fullName>
            </value>
            <value>
                <fullName>BE_NL</fullName>
            </value>
            <value>
                <fullName>CH</fullName>
                <isActive>false</isActive>
                <label>CH</label>
            </value>
            <value>
                <fullName>CH_DE</fullName>
            </value>
            <value>
                <fullName>CH_EN</fullName>
            </value>
            <value>
                <fullName>CH_FR</fullName>
            </value>
            <value>
                <fullName>CH_IT</fullName>
            </value>
            <value>
                <fullName>CZ</fullName>
                <isActive>false</isActive>
                <label>CZ</label>
            </value>
            <value>
                <fullName>CZ_CZ</fullName>
            </value>
            <value>
                <fullName>CZ_FR</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
                <isActive>false</isActive>
                <label>DE</label>
            </value>
            <value>
                <fullName>DE_DE</fullName>
            </value>
            <value>
                <fullName>DE_EN</fullName>
            </value>
            <value>
                <fullName>DE_FR</fullName>
            </value>
            <value>
                <fullName>ES</fullName>
                <isActive>false</isActive>
                <label>ES</label>
            </value>
            <value>
                <fullName>ES_ES</fullName>
            </value>
            <value>
                <fullName>ES_FR</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>FR_FR</fullName>
            </value>
            <value>
                <fullName>GB</fullName>
                <isActive>false</isActive>
                <label>GB</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>