unpackaged/main/default/objects/Quote/fields/Code_PF_demande__c.field-meta.xml
<CustomField>
    <fullName>Code_PF_demande__c</fullName>
    <label>Code PF demandé</label>
    <length>255</length>
    <type>Text</type>
</CustomField>