unpackaged/main/default/objects/Quote/fields/Code_PF_FlowInput__c.field-meta.xml
<CustomField>
    <fullName>Code_PF_FlowInput__c</fullName>
    <label>Code PF</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>100E19 CF</fullName>
            </value>
            <value>
                <fullName>100E19 CH</fullName>
            </value>
            <value>
                <fullName>100E19 CH KALHYGE</fullName>
                <isActive>false</isActive>
                <label>100E19 CH KALHYGE</label>
            </value>
            <value>
                <fullName>100E19 CH - KALHYGE</fullName>
            </value>
            <value>
                <fullName>100E19 CH KALHYGE - OPTIONS</fullName>
                <isActive>false</isActive>
                <label>100E19 CH KALHYGE - OPTIONS</label>
            </value>
            <value>
                <fullName>100E19 CH - SDEZ 5</fullName>
                <isActive>false</isActive>
                <label>100E19 CH - SDEZ 5</label>
            </value>
            <value>
                <fullName>100E19 CH - SDEZ 6</fullName>
                <isActive>false</isActive>
                <label>100E19 CH - SDEZ 6</label>
            </value>
            <value>
                <fullName>100E19 CS</fullName>
            </value>
            <value>
                <fullName>100E21 CF</fullName>
            </value>
            <value>
                <fullName>100E21 CH</fullName>
            </value>
            <value>
                <fullName>100E21 CS</fullName>
            </value>
            <value>
                <fullName>1018 CF</fullName>
            </value>
            <value>
                <fullName>1018 CH</fullName>
            </value>
            <value>
                <fullName>1018 CS</fullName>
            </value>
            <value>
                <fullName>1021 CF</fullName>
            </value>
            <value>
                <fullName>1021 CS</fullName>
            </value>
            <value>
                <fullName>120E19 CB</fullName>
            </value>
            <value>
                <fullName>120E19 CBL</fullName>
            </value>
            <value>
                <fullName>120E19 CF</fullName>
            </value>
            <value>
                <fullName>120E19 CH</fullName>
            </value>
            <value>
                <fullName>120E19 CH KALHYGE</fullName>
                <isActive>false</isActive>
                <label>120E19 CH KALHYGE</label>
            </value>
            <value>
                <fullName>120E19 CH - KALHYGE</fullName>
            </value>
            <value>
                <fullName>120E19 CH KALHYGE - OPTIONS</fullName>
                <isActive>false</isActive>
                <label>120E19 CH KALHYGE - OPTIONS</label>
            </value>
            <value>
                <fullName>120E19 CS</fullName>
            </value>
            <value>
                <fullName>120E21 CB</fullName>
            </value>
            <value>
                <fullName>120E21 CF</fullName>
            </value>
            <value>
                <fullName>120E21 CF - LA REUNION</fullName>
            </value>
            <value>
                <fullName>120E21 CH</fullName>
            </value>
            <value>
                <fullName>120E21 CH - DOM TOM</fullName>
            </value>
            <value>
                <fullName>120E21 CS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>