unpackaged/main/default/objects/Quote/fields/Commentaires_internes__c.field-meta.xml
<CustomField>
    <fullName>Commentaires_internes__c</fullName>
    <inlineHelpText>Le contenu du commentaire ne sera pas visible sur le document client</inlineHelpText>
    <label>Commentaires internes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>