unpackaged/main/default/objects/Quote/fields/Covering__c.field-meta.xml
<CustomField>
    <fullName>Covering__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Covering</label>
    <type>Checkbox</type>
</CustomField>