unpackaged/main/default/objects/Quote/fields/Date_Heure_Demande_de_tarification__c.field-meta.xml
<CustomField>
    <fullName>Date_Heure_Demande_de_tarification__c</fullName>
    <label>Date/Heure Demande de tarification</label>
    <type>DateTime</type>
</CustomField>