unpackaged/main/default/objects/Quote/fields/Date_heure_tarification__c.field-meta.xml
<CustomField>
    <fullName>Date_heure_tarification__c</fullName>
    <label>Date / heure tarification</label>
    <type>DateTime</type>
</CustomField>