unpackaged/main/default/objects/Quote/fields/Date_signature__c.field-meta.xml
<CustomField>
    <fullName>Date_signature__c</fullName>
    <defaultValue>&quot;:&quot;</defaultValue>
    <label>Date signature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>