unpackaged/main/default/objects/Quote/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deal Stratégique</label>
    <type>Checkbox</type>
</CustomField>