unpackaged/main/default/objects/Quote/fields/Delegation_DP__c.field-meta.xml
<CustomField>
    <fullName>Delegation_DP__c</fullName>
    <description>Calcul délégation DP à partir du loyer country manager et loyer devis</description>
    <formula>IF
(
NOT(ISBLANK(  Loyer_DO_DF__c ))
,
(( Loyer__c -  Loyer_DO_DF__c ))/Loyer__c
,
0
)</formula>
    <label>Délégation DP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>