unpackaged/main/default/objects/Quote/fields/Delegation_DS__c.field-meta.xml
<CustomField>
    <fullName>Delegation_DS__c</fullName>
    <description>Calcul délégation DS à partir du loyer devis et loyer depot manager</description>
    <formula>IF
(
NOT(ISBLANK( Loyer_Directeur_de_site__c ))
,
(( Loyer__c -  Loyer_Directeur_de_site__c )/Loyer__c)
,
0
)</formula>
    <label>Délégation DS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>