unpackaged/main/default/objects/Quote/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Désignation</label>
    <type>TextArea</type>
</CustomField>