unpackaged/main/default/objects/Quote/fields/Designation_demandee__c.field-meta.xml
<CustomField>
    <fullName>Designation_demandee__c</fullName>
    <label>Désignation demandée</label>
    <type>TextArea</type>
</CustomField>