unpackaged/main/default/objects/Quote/fields/Devis__c.field-meta.xml
<CustomField>
    <fullName>Devis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Devis modèle</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Quote.Modele_de_devis__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Devis</relationshipLabel>
    <relationshipName>Devis</relationshipName>
    <type>Lookup</type>
</CustomField>