unpackaged/main/default/objects/Quote/fields/Devis_clone__c.field-meta.xml
<CustomField>
    <fullName>Devis_clone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Devis cloné</label>
    <type>Checkbox</type>
</CustomField>