unpackaged/main/default/objects/Quote/fields/Devis_origine__c.field-meta.xml
<CustomField>
    <fullName>Devis_origine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Devis d&#39;origine</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Devis (Devis d&#39;origine)</relationshipLabel>
    <relationshipName>Devis_Enfant</relationshipName>
    <type>Lookup</type>
</CustomField>