unpackaged/main/default/objects/Quote/fields/DevisTarife_Stamp__c.field-meta.xml
<CustomField>
    <fullName>DevisTarife_Stamp__c</fullName>
    <label>DevisTarife_Stamp</label>
    <type>DateTime</type>
</CustomField>