unpackaged/main/default/objects/Quote/fields/Dimension_ouverture_laterale_mm__c.field-meta.xml
<CustomField>
    <fullName>Dimension_ouverture_laterale_mm__c</fullName>
    <label>Largeur utile ouverture latérale (mm)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>450 mm</fullName>
            </value>
            <value>
                <fullName>750 mm</fullName>
            </value>
            <value>
                <fullName>1000 mm</fullName>
            </value>
            <value>
                <fullName>1300 mm</fullName>
            </value>
            <value>
                <fullName>TOTALE (Baché lat)</fullName>
            </value>
            <value>
                <fullName>HORS STANDARD - voir aménagements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>