unpackaged/main/default/objects/Quote/fields/Divers__c.field-meta.xml
<CustomField>
    <fullName>Divers__c</fullName>
    <label>Divers</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>