unpackaged/main/default/objects/Quote/fields/Duree_1__c.field-meta.xml
<CustomField>
    <fullName>Duree_1__c</fullName>
    <label>Durée 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>