unpackaged/main/default/objects/Quote/fields/Duree_2__c.field-meta.xml
<CustomField>
    <fullName>Duree_2__c</fullName>
    <label>Durée 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>