unpackaged/main/default/objects/Quote/fields/Duree_3__c.field-meta.xml
<CustomField>
    <fullName>Duree_3__c</fullName>
    <label>Durée 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>