unpackaged/main/default/objects/Quote/fields/Duree_de_realisation_dessin__c.field-meta.xml
<CustomField>
    <fullName>Duree_de_realisation_dessin__c</fullName>
    <formula>if
(
OR(NOT(ISBLANK( EnAttenteLecapitaineDessin_stamp__c )),NOT(ISBLANK(  EnAttenteLecapitaineAdessiner_Stamp__c )))
,
(EnAttenteLecapitaineDessin_stamp__c  - EnAttenteLecapitaineAdessiner_Stamp__c )*24
,
NULL

)</formula>
    <label>Durée de réalisation dessin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>